[package]
name = "schtask"
version = "0.1.0"
edition = "2024"

[lib]
name = "schtask"
path = "src/lib.rs"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
winapi = {version = "0.3.9", features = ['combaseapi', 'objbase', 'taskschd', 'oleauto'] }
winreg = "0.50"